<resources>
    <string name="app_name">ScientificCalculator</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="cuberoot">\u221B</string>
    <string name="square">x²</string>
    <string name="cube">x\u00B3</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="pi">π</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="mode1">Degree</string>
    <string name="mode2">Radian</string>
    <string name="toggle">SWITCH</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>
    <string name="factorial" >x!</string>
    <string name="barcode" >Barcode</string>
    <string name="qrcode" >QRCode</string>
    <string name="barcodescanner">Bar Code Scanner</string>
    <string name="qr_code_scanner">QR Code Scanner</string>

    <!--Ad mob Ads Id Setup-->
    <string name="app_id">ca-app-pub-6332902664669045~7786844079</string>
    <string name="banner_id">ca-app-pub-6332902664669045/9050634911</string>
    <string name="interstitial_id">ca-app-pub-6332902664669045/9564079730</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
</resources> 
