<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/grey_transparent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_below="@+id/adView"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/grey_transparent"
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:weightSum="1"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp">



            <ImageView
                android:onClick="onClick"
                android:id="@+id/imvScan"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_qr_scan"
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight=".9"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/tv_fnum"
                android:textAlignment="textEnd"
                android:gravity="end"/>


        </LinearLayout>



        <TextView
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/tv_snum"
            android:textAlignment="textEnd"
            android:gravity="end"/>
    </LinearLayout>



    <ScrollView
        android:layout_below="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/rowF"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:id="@+id/square"
            android:text="@string/square"
            android:onClick="onClick"
            android:textAllCaps="false"/>

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:id="@+id/xpowy"
            android:text="@string/xpown"
            android:onClick="onClick"
            android:textAllCaps="false"/>

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="60dp"
            android:text="log"
            android:id="@+id/log"
            android:onClick="onClick"
            android:textAllCaps="false"/>

        <Button
            android:textColor="@color/colorAccentRed"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="60dp"
            android:text="@string/clear"
            android:id="@+id/clear"
            android:onClick="onClick" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="4dp"
        android:id="@+id/rowS"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_below="@+id/rowF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="60dp"
            android:text="@string/sin"
            android:id="@+id/sin"
            android:onClick="onClick"
            android:textAllCaps="false"/>

        <Button
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:text="@string/cos"
            android:id="@+id/cos"
            android:onClick="onClick"
            android:textAllCaps="false"/>

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/tan"
            android:id="@+id/tan"
            android:onClick="onClick"
            android:textAllCaps="false"/>


        <Button
            android:textColor="@color/colorAccentRed"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/backspace"
            android:id="@+id/backSpace"
            android:onClick="onClick" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="4dp"

        android:id="@+id/rowT"
        android:layout_below="@+id/rowS"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">




        <Button
            android:textSize="14sp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/toggle"
            android:text="@string/toggle"
            android:checked="false"
            android:onClick="onClick" />

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/factorial"
            android:id="@+id/factorial"
            android:onClick="onClick"
            android:textAllCaps="false"/>

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/sqrt"
            android:text="@string/sqrt"
            android:onClick="onClick"
            android:textAllCaps="false"/>

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/pi"
            android:id="@+id/pi"
            android:onClick="onClick"
            android:textAllCaps="false"/>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="4dp"
        android:id="@+id/rowFr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rowT"
        android:orientation="horizontal"
        android:weightSum="4">



        <Button
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="7"
            android:id="@+id/num7"
            android:onClick="onClick"/>

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="8"
            android:id="@+id/num8"
            android:onClick="onClick" />

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="9"
            android:id="@+id/num9"
            android:onClick="onClick" />


        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/divide"
            android:id="@+id/divide"
            android:onClick="onClick" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="4dp"
        android:layout_below="@id/rowFr"
        android:id="@+id/rowFive"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">





        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="4"
            android:id="@+id/num4"
            android:onClick="onClick" />

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="5"
            android:id="@+id/num5"
            android:onClick="onClick" />

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="6"
            android:id="@+id/num6"
            android:onClick="onClick" />

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="x"
            android:id="@+id/multiply"
            android:onClick="onClick" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="4dp"
        android:id="@+id/rowSix"
        android:layout_below="@id/rowFive"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="1"
            android:id="@+id/num1"
            android:onClick="onClick" />

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="2"
            android:id="@+id/num2"
            android:onClick="onClick" />

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="3"
            android:id="@+id/num3"
            android:onClick="onClick" />



        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="-"
            android:id="@+id/minus"
            android:onClick="onClick" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="4dp"

        android:layout_below="@+id/rowSix"
        android:id="@+id/rowSeven"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/posneg"
            android:id="@+id/posneg"
            android:onClick="onClick" />

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="0"
            android:id="@+id/num0"
            android:onClick="onClick" />

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="."
            android:id="@+id/dot"
            android:onClick="onClick" />


        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="+"
            android:id="@+id/plus"
            android:onClick="onClick" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="4dp"

        android:id="@+id/rowEight"
        android:layout_below="@id/rowSeven"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">





        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/openBracket"
            android:id="@+id/openBracket"
            android:onClick="onClick"/>

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/closeBracket"
            android:id="@+id/closeBracket"
            android:onClick="onClick"/>

        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="="
            android:id="@+id/equal"
            android:onClick="onClick" />


        <Button

            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/mode1"
            android:id="@+id/mode"
            android:onClick="onClick"
            android:textAllCaps="false"/>

    </LinearLayout>



    </RelativeLayout>
    </ScrollView>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_id"/>

</RelativeLayout>
